# llm_explore

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
llm_explore/: __init__.py  dataset.py  definitions.py  features.py  plots.py  utils.py
llm_explore/modeling/: predict.py  train.py
notebooks/: basic_mlp.ipynb  evaluate_model.ipynb  fine_tune.ipynb  fine_tune_old.ipynb  pytorch_explore.ipynb  summarize_dialogues.ipynb
